--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "com.google.android.material:material:1.2.1"
 
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
+
 }
